syntax = "proto3";

package profile;

service ProfileService{
    rpc ViewProfile (Empty) returns (ViewProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileRespone);
}

message Empty {}

message ViewProfileResponse{
    string firstName = 1;
    string lastName = 2;
    string emailId = 3;
    int32 age = 4;
    string gender = 5;
    string skills = 6;
    string photourl = 7;
}

message UpdateProfileRequest{
    string age = 1;
    string skills = 2;
    string photoUrl = 3;
}

message UpdateProfileRespone{
    string response = 1;
}
