syntax = "proto3";

package auth;

service AuthService{
    rpc UserLogIn(UserLoginRequest) returns (UserLogInResponse);
    rpc UserSignUp(UserSignUpRequest) returns (UserSignUpResponse);
}

message Empty {}

message UserLoginRequest {
    string emailId = 1;
    string password = 2;
}

message UserSignUpResponse {
    string response = 1;
}

message UserLogInResponse{
    string sessionId = 1;
}

message UserSignUpRequest{
    string firstName = 1;
    string lastName = 2;
    string emailId = 3;
    string password = 4;
} 